<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_camera" android:title="@string/action_camera"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_featurecam" android:title="@string/action_featurecam"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_video" android:title="@string/action_video"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_audio" android:title="@string/action_audio"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_qrcode" android:title="@string/action_qr"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
